--- a/.github/workflows/conda_iowarp-core.yml
+++ b/.github/workflows/conda_iowarp-core.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           channels: conda-forge, iowarp
 #          auto-update-conda: true
-#          python-version: 3.12
+          python-version: 3.11
 
       - name: checkout
         uses: actions/checkout@v5
@@ -31,6 +31,7 @@ jobs:
           conda install -y conda-build
           conda install -y conda-verify
           conda install -y anaconda-client
+          export /usr/share/miniconda/bin:$PATH
           conda-build .
 #          conda install iowarp-core
 #          find /usr/share/miniconda
