--- a/.github/workflows/conda_iowarp-core.yml
+++ b/.github/workflows/conda_iowarp-core.yml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: iowarp/core
+          submodules: recursive
 
       - name: iowarp
         run: |
