--- a/.github/workflows/conda_iowarp-core.yml
+++ b/.github/workflows/conda_iowarp-core.yml
@@ -59,4 +59,5 @@ jobs:
             echo "ANACONDA_TOKEN is not set. Skipping upload."
             exit 0
           fi
+          anaconda login
           anaconda -v upload /usr/share/miniconda/conda-bld/linux-64/iowarp-core-0.6.5-py313h3fd9d12_0.conda
