--- a/.github/workflows/lin.yml
+++ b/.github/workflows/lin.yml
@@ -26,4 +26,4 @@ jobs:
             -DCTEST_BUILD_FLAGS="-j2" \
             -DSITE:STRING=ubu-24 \
             ..
-          ninja
+          ctest -C Release -D Experimental
