ci: enable ctest

--- a/.github/workflows/lin_hk_off.yml
+++ b/.github/workflows/lin_hk_off.yml
@@ -1,4 +1,4 @@
-name: lin off in
+name: lin hk off in
 
 on:
   push:
@@ -24,7 +24,7 @@ jobs:
           mkdir build
           cd build
           cmake \
-            -DBUILDNAME:STRING="r/off/ui/ei/vi" \
+            -DBUILDNAME:STRING="hk/r/off/ui/ei/vi" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_EXPERIMENTAL_INSTRUMENTATION=ec7aa2dc-b87f-45a3-8022-fe01c5f59984 \
@@ -33,7 +33,7 @@ jobs:
             -DSITE:STRING=ubu-24 \
             -DBUILD_SHARED_LIBS=ON \
             -DBUILD_STATIC_LIBS=OFF \
-            -DBUILD_TESTING=OFF \
+            -DBUILD_TESTING=ON \
             -DHDF5_BUILD_EXAMPLES=OFF \
             -DHDF5_BUILD_TOOLS=OFF \
             -DHDF5_BUILD_HL_LIB=OFF \
@@ -41,4 +41,4 @@ jobs:
             -DHDF5_BUILD_FORTRAN=OFF \
             -DHDF5_BUILD_JAVA=OFF \
             ..
-            time make -j
+            ctest -C Release -D Experimental
