--- a/.github/workflows/lin_off.yml
+++ b/.github/workflows/lin_off.yml
@@ -33,7 +33,7 @@ jobs:
             -DSITE:STRING=ubu-24 \
             -DBUILD_SHARED_LIBS=ON \
             -DBUILD_STATIC_LIBS=OFF \
-            -DBUILD_TESTING=OFF \
+            -DBUILD_TESTING=ON \
             -DHDF5_BUILD_EXAMPLES=OFF \
             -DHDF5_BUILD_TOOLS=OFF \
             -DHDF5_BUILD_HL_LIB=OFF \
