--- a/.github/workflows/lin_hk_off.yml
+++ b/.github/workflows/lin_hk_off.yml
@@ -11,7 +11,7 @@ jobs:
       - name: h5
         uses: actions/checkout@v5
         with:
-          repository: HDFGroup/hdf5
+          repository: hyoklee/hdf5
       - name: cmake-4.2
         uses: jwlawson/actions-setup-cmake@v2
         with:
