--- a/.github/workflows/mac_hk_off.yml
+++ b/.github/workflows/mac_hk_off.yml
@@ -24,7 +24,7 @@ jobs:
           mkdir build
           cd build
           cmake \
-            -DBUILDNAME:STRING="hk/r/off/ui/ei/vi" \
+            -DBUILDNAME:STRING="hk/r/off/ui/ei/vi/j3" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING=mac-26 \
@@ -38,4 +38,4 @@ jobs:
             -DHDF5_BUILD_FORTRAN=OFF \
             -DHDF5_BUILD_JAVA=OFF \
             ..
-            ctest -C Release -D Experimental
+            ctest -C Release -D Experimental -j3
