--- a/.github/workflows/mac_hk_16a8005_ninja_off.yml
+++ b/.github/workflows/mac_hk_16a8005_ninja_off.yml
@@ -1,9 +1,9 @@
-name: mac hk ninja off in j
+name: mac hk 16a8005 ninja off in j
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: macos-26
@@ -12,6 +12,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           repository: hyoklee/hdf5
+          ref: 16a8005aae7e3ba9e53d69fe534eeaa42eb06a6a
       - name: cmake-4.2
         uses: jwlawson/actions-setup-cmake@v2
         with:
@@ -25,7 +26,7 @@ jobs:
           cd build
           cmake \
             -G Ninja \
-            -DBUILDNAME:STRING="hk/ninja/r/off/ui/ei/vi/j" \
+            -DBUILDNAME:STRING="hk16/ninja/r/off/ui/ei/vi/j" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING=mac-26 \
