--- a/.github/workflows/lin_hk_cmake-4.2_ninja_off.yml
+++ b/.github/workflows/lin_hk_cmake-4.2_ninja_off.yml
@@ -1,9 +1,9 @@
-name: lin hk cmake-4.2 ninja
+name: lin hk cmake-4.2 ninja off
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-24.04
@@ -25,7 +25,7 @@ jobs:
           cd build
           cmake \
             -G Ninja \
-            -DBUILDNAME:STRING="hk/cmake-4.2/ninja/r" \
+            -DBUILDNAME:STRING="hk/cmake-4.2/ninja/r/off" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING=ubu-24 \
