--- a/.github/workflows/lin_hk_cmake-4.2_ninja_off.yml
+++ b/.github/workflows/lin_hk_cmake-4.2_ninja_off.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           cmakeVersion: latest
       - name: test
-        env:        
+        env:
           CTEST_USE_INSTRUMENTATION: 1
           CTEST_EXPERIMENTAL_INSTRUMENTATION: ec7aa2dc-b87f-45a3-8022-fe01c5f59984
         run: |
@@ -29,5 +29,14 @@ jobs:
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING=ubu-24 \
+            -DBUILD_SHARED_LIBS=ON \
+            -DBUILD_STATIC_LIBS=OFF \
+            -DBUILD_TESTING=ON \
+            -DHDF5_BUILD_EXAMPLES=OFF \
+            -DHDF5_BUILD_TOOLS=OFF \
+            -DHDF5_BUILD_HL_LIB=OFF \
+            -DHDF5_BUILD_CPP_LIB=OFF \
+            -DHDF5_BUILD_FORTRAN=OFF \
+            -DHDF5_BUILD_JAVA=OFF \
             ..
           ctest -C Release -D Experimental -j
