ci(ssciwr): test 1.14.0

--- a/.github/workflows/lin_hk_cmake-4.2_ninja_off.yml
+++ b/.github/workflows/lin_hk_cmake-4.2_ninja_off.yml
@@ -3,7 +3,7 @@ name: lin hk cmake-4.2 ninja off
 on:
   push:
     branches:
-      - main
+      - main-
 jobs:
   build:
     runs-on: ubuntu-24.04
