--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           repository: hyoklee/hdf5
-          path: .
+          ref: HDFGroup-hdf5-5975
 
       - name: set
         uses: msys2/setup-msys2@v2
@@ -48,4 +48,4 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING="${{ matrix.sys }}.${{ matrix.os }}" \
             ..
-          ctest -D Experimental -j
+          ctest -D Experimental -j -E "dt_arith"
