test: clang64 only

--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -10,9 +10,9 @@ jobs:
     strategy:
       matrix:
         sys:
-          - mingw64
-          - mingw32
-          - ucrt64
+#          - mingw64
+#          - mingw32
+#          - ucrt64
           - clang64
         os: [windows-2022, windows-2025, windows-11-arm]
     runs-on: ${{ matrix.os }}
@@ -43,7 +43,7 @@ jobs:
           mkdir build
           cd build
           cmake -G Ninja \
-            -DBUILDNAME:STRING="hk/ninja" \
+            -DBUILDNAME:STRING="5975/ninja" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING="${{ matrix.sys }}.${{ matrix.os }}" \
