--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -49,4 +49,5 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING="${{ matrix.sys }}.${{ matrix.os }}" \
             ..
-          ctest -D Experimental -E "dt_arith" -j 
+          ctest -R "h5_api_test_object"
+#          ctest -D Experimental -E "dt_arith" -j 
