--- a/.github/workflows/msys2.yml
+++ b/.github/workflows/msys2.yml
@@ -50,6 +50,6 @@ jobs:
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DSITE:STRING="${{ matrix.sys }}.${{ matrix.os }}" \
             ..
-           ctest -D Experimental -j
+           ctest -D Experimental -E "dt_arith" -j
 #          ctest -R "h5_api_test_object"
 #          ctest -D Experimental -E "dt_arith" -j 
