--- a/.github/workflows/musl.yml
+++ b/.github/workflows/musl.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: "muslcc/x86_64"    
+    container: "muslcc/x86_64:x86_64-linux-musl"    
     steps:
       - name: checkout
         uses: actions/checkout@v6
