--- a/.github/workflows/musl.yml
+++ b/.github/workflows/musl.yml
@@ -10,6 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     container: "muslcc/x86_64:x86_64-linux-musl"    
     steps:
+      - name: Use Node.js 20.x on Alpine
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+          check-latest: true      
       - name: checkout
         uses: actions/checkout@v6
         with:
