ci(alp,x64): install git

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -23,6 +23,7 @@ jobs:
             libgit2-dev
             cmake
             gfortran
+            gawk
             git
       - name: test
         run: |
