ci(alp,x64): install texinfo

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -19,12 +19,14 @@ jobs:
         with:
           arch: x86
           packages: >
+            bison
             build-base
-            libgit2-dev
             cmake
+            flex
             gfortran
             gawk
             git
+            texinfo
       - name: test
         run: |
           git clone https://github.com/riscv-collab/riscv-gnu-toolchain
