ci(alp,x64): install wget

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -27,6 +27,7 @@ jobs:
             gawk
             git
             texinfo
+            wget
       - name: test
         run: |
           git clone https://github.com/riscv-collab/riscv-gnu-toolchain
