ci(alp,x64): install sudo

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -26,6 +26,7 @@ jobs:
             gfortran
             gawk
             git
+            sudo
             texinfo
             wget
       - name: test
