ci(alp,x64): gmp mpfr

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -23,9 +23,11 @@ jobs:
             build-base
             cmake
             flex
-            gfortran
             gawk
+            gfortran
             git
+            gmp-dev
+            mpfr-dev
             sudo
             texinfo
             wget
