ci(alp,x64): expat-dev

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -23,6 +23,7 @@ jobs:
             build-base
             cmake
             flex
+            expat-dev
             gawk
             gfortran
             git
