--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -34,16 +34,17 @@ jobs:
             wget
       - name: test
         run: |
+          mkdir $HOME/.local
           git clone https://github.com/riscv-collab/riscv-gnu-toolchain
           cd riscv-gnu-toolchain
-          ./configure  --with-arch=rv64gcv --with-abi=lp64d--with-languages=c,c++,fortran
+          ./configure  --with-arch=rv64gcv --with-abi=lp64d--with-languages=c,c++,fortran --prefix=$HOME/.local
           make -j musl
-          sudo make install
+          make install
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
           ./configure \
-            --prefix=/mpich-riscv64 \
+            --prefix=$HOME/.local \
             --host=riscv64-linux-gnu \
              CC=riscv64-linux-gnu-gcc-14 \
              CXX=riscv64-linux-gnu-g++-14 \
