--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -34,11 +34,11 @@ jobs:
             wget
       - name: test
         run: |
-          mkdir $HOME/.local
+          mkdir .local
           git clone https://github.com/riscv-collab/riscv-gnu-toolchain
           cd riscv-gnu-toolchain
-          ./configure  --with-arch=rv64gcv --with-abi=lp64d--with-languages=c,c++,fortran --prefix=$HOME/.local
-          make -j musl
+          ./configure  --with-arch=rv64gcv --with-abi=lp64d--with-languages=c,c++,fortran --prefix=.local
+          make musl
           make install
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
