--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -38,7 +38,7 @@ jobs:
           mkdir $HOME/.local
           git clone https://github.com/riscv-collab/riscv-gnu-toolchain
           cd riscv-gnu-toolchain
-          ./configure  --with-arch=rv64gcv --with-abi=lp64d--with-languages=c,c++,fortran --prefix=$HOME/.local
+          ./configure  --with-arch=rv64gcv --with-abi=lp64d --with-languages=c,c++,fortran --prefix=$HOME/.local
           make musl
           make install
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
