ci(alp,xc): zlib-dev

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -32,6 +32,7 @@ jobs:
             sudo
             texinfo
             wget
+            zlib-dev
       - name: test
         run: |
           echo $HOME
