--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -45,12 +45,13 @@ jobs:
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
+          export PATH=$HOME/.local/bin:$PATH         
           ./configure \
             --prefix=$HOME/.local \
-            --host=riscv64-linux-gnu \
-             CC=riscv64-linux-gnu-gcc-14 \
-             CXX=riscv64-linux-gnu-g++-14 \
-             FC=riscv64-linux-gnu-gfortran-14 \
+            --host=riscv64-linux-musl \
+             CC=riscv64-unknown-linux-musl-gcc \
+             CXX=riscv64-unknown-linux-musl-g++ \
+             FC=riscv64-unknown-linux-musl-gfortran \
              CROSS_F90_ADDRESS_KIND=8 \
              CROSS_F90_OFFSET_KIND=8 \
              CROSS_F90_INTEGER_KIND=4 \
