ci(alp): python3

--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -29,6 +29,7 @@ jobs:
             git
             gmp-dev
             mpfr-dev
+            python3
             sudo
             texinfo
             wget
