--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -41,12 +41,13 @@ jobs:
           git clone https://github.com/riscv-collab/riscv-gnu-toolchain
           cd riscv-gnu-toolchain
           ./configure  --with-arch=rv64gcv --with-abi=lp64d --with-languages=c,c++,fortran --prefix=$HOME/.local
-          make musl
+          make -j musl
           make install
+          cd ..
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
-          export PATH=$HOME/.local/bin:$PATH         
+          export PATH=$HOME/.local/bin:$PATH
           ./configure \
             --prefix=$HOME/.local \
             --host=riscv64-linux-musl \
@@ -61,7 +62,7 @@ jobs:
              CROSS_F90_INTEGER_KIND=4 \
              CROSS_F90_REAL_MODEL=15,307 \
              CROSS_F90_DOUBLE_MODEL=15,307
-          make
+          make -j
           make install
           cd ..
           rm -rf mpich-4.1 mpich-4.1.tar.gz
@@ -74,7 +75,7 @@ jobs:
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
             -DHDF5_ENABLE_PARALLEL=ON \
-            -DSITE:STRING=alp \
-             ..
+            -DSITE:STRING="alp" \
+            ..
           ctest -C Debug -D Experimental
         shell: alpine.sh --root {0}
