--- a/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1_f.yml
@@ -41,7 +41,7 @@ jobs:
           git clone https://github.com/riscv-collab/riscv-gnu-toolchain
           cd riscv-gnu-toolchain
           ./configure  --with-arch=rv64gcv --with-abi=lp64d --with-languages=c,c++,fortran --prefix=$HOME/.local
-          make musl
+          make -j2 musl
           make install
           cd ..
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
@@ -62,7 +62,7 @@ jobs:
              CROSS_F90_INTEGER_KIND=4 \
              CROSS_F90_REAL_MODEL=15,307 \
              CROSS_F90_DOUBLE_MODEL=15,307
-          make -j
+          make -j2
           make install
           cd ..
           rm -rf mpich-4.1 mpich-4.1.tar.gz
