--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -8,7 +8,8 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-15-intel, macos-15, windows-2022, windows-2025, windows-11-arm]
+         os: [macos-15-intel, macos-15]
+#        os: [macos-15-intel, macos-15, windows-2022, windows-2025, windows-11-arm]
     runs-on: ${{ matrix.os }}
     steps:
       - name: get
