--- a/.github/workflows/alp_mpich-4.1_gcc-14.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-14.1.yml
@@ -3,7 +3,7 @@ name: alp mpich-4.1 gcc-14.1 f
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -87,11 +87,11 @@ jobs:
           cmake \
             -DCMAKE_CROSSCOMPILING=TRUE \
             -DCMAKE_SYSTEM_PROCESSOR=riscv64 \
-            -DBUILDNAME:STRING="x86_64.riscv/mpich-4.1/gcc-14.1/f" \
+            -DBUILDNAME:STRING="x86_64.riscv/mpich-4.1/gcc-14.1" \
             -DCMAKE_BUILD_TYPE=Debug \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
-            -DHDF5_BUILD_FORTRAN=ON \
+            -DHDF5_BUILD_FORTRAN=OFF \
             -DHDF5_ENABLE_PARALLEL=ON \
             -DSITE:STRING="alp" \
             ..
