--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -1,9 +1,9 @@
-name: alp mpich-4.1 gcc-14.1 f
+name: alp mpich-4.1 gcc-15.1
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -36,32 +36,18 @@ jobs:
             zlib-dev
       - name: test
         run: |
-          echo $HOME
-          mkdir $HOME/.local
-          git clone https://github.com/riscv-collab/riscv-gnu-toolchain
-          cd riscv-gnu-toolchain
-          ./configure  --with-arch=rv64gcv --with-abi=lp64d --with-languages=c,c++,fortran --prefix=$HOME/.local
-          make -j2 musl
-          make install
-          cd ..
+          wget https://github.com/riscv-collab/riscv-gnu-toolchain/releases/download/2025.11.27/riscv64-musl-ubuntu-24.04-gcc.tar.xz
+          tar -xvf riscv64-musl-ubuntu-24.04-gcc.tar.xz
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
-          export PATH=$HOME/.local/bin:$PATH
+          export PATH=/home/runner/work/actions/actions/riscv64-musl-ubuntu-24.04-gcc/riscv/bin:$PATH
           ./configure \
             --prefix=$HOME/.local \
+            --disable-fortran \
             --host=riscv64-linux-musl \
              CC=riscv64-unknown-linux-musl-gcc \
              CXX=riscv64-unknown-linux-musl-g++ \
-             FC=riscv64-unknown-linux-musl-gfortran \
-             CROSS_F77_SIZEOF_INTEGER=4 \
-             CROSS_F77_SIZEOF_REAL=4 \
-             CROSS_F77_SIZEOF_DOUBLE_PRECISION=8 \
-             CROSS_F90_ADDRESS_KIND=8 \
-             CROSS_F90_OFFSET_KIND=8 \
-             CROSS_F90_INTEGER_KIND=4 \
-             CROSS_F90_REAL_MODEL=15,307 \
-             CROSS_F90_DOUBLE_MODEL=15,307
           make -j2
           make install
           cd ..
@@ -85,6 +71,7 @@ jobs:
           export CROSS_F90_DOUBLE_MODEL=15,307
           export RISCV_ARCH_FLAGS="-march=rv64gc -mabi=lp64d"
           cmake \
+            -DCMAKE_INSTALL_PREFIX=$HOME/.local \
             -DCMAKE_CROSSCOMPILING=TRUE \
             -DCMAKE_SYSTEM_PROCESSOR=riscv64 \
             -DBUILDNAME:STRING="x86_64.riscv/mpich-4.1/gcc-15.1" \
@@ -95,5 +82,8 @@ jobs:
             -DHDF5_ENABLE_PARALLEL=ON \
             -DSITE:STRING="alp" \
             ..
-          ctest -C Debug -D Experimental
+          make -j2
+          make install
+          ls $HOME/.local/lib/pkgconfig
+          cat $HOME/.local/lib/pkgconfig/hdf5.pc
         shell: alpine.sh --root {0}
