--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -41,7 +41,7 @@ jobs:
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
-          export PATH=/home/runner/work/actions/actions/riscv64-musl-ubuntu-24.04-gcc/riscv/bin:$PATH
+          export PATH=/home/runner/work/actions/actions/riscv/bin:$PATH
           ./configure \
             --prefix=$HOME/.local \
             --disable-fortran \
