--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -41,13 +41,14 @@ jobs:
           wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
+          ls -l /home/runner/work/actions/actions/riscv/bin
           export PATH=/home/runner/work/actions/actions/riscv/bin:$PATH
           ./configure \
             --prefix=$HOME/.local \
             --disable-fortran \
             --host=riscv64-linux-musl \
-             CC=riscv64-unknown-linux-musl-gcc \
-             CXX=riscv64-unknown-linux-musl-g++ || true
+             CC=/home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc \
+             CXX=/home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-g++ || true
         shell: alpine.sh --root {0}
       - name: Upload config.log on failure
         uses: actions/upload-artifact@v4
