--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -36,12 +36,13 @@ jobs:
             zlib-dev
       - name: test
         run: |
-          wget https://github.com/riscv-collab/riscv-gnu-toolchain/releases/download/2025.11.27/riscv64-musl-ubuntu-24.04-gcc.tar.xz
+          wget -q  https://github.com/riscv-collab/riscv-gnu-toolchain/releases/download/2025.11.27/riscv64-musl-ubuntu-24.04-gcc.tar.xz
           tar -xvf riscv64-musl-ubuntu-24.04-gcc.tar.xz
-          wget https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
+          ls -l /home/runner/work/actions/actions/riscv/bin
+          /home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc -v
+          wget -q  https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
           cd mpich-4.1
-          ls -l /home/runner/work/actions/actions/riscv/bin
           export PATH=/home/runner/work/actions/actions/riscv/bin:$PATH
           ./configure \
             --prefix=$HOME/.local \
