--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -38,7 +38,9 @@ jobs:
         run: |
           wget -q  https://github.com/riscv-collab/riscv-gnu-toolchain/releases/download/2025.11.27/riscv64-musl-ubuntu-24.04-gcc.tar.xz
           tar -xvf riscv64-musl-ubuntu-24.04-gcc.tar.xz
+          pwd
           ls -l /home/runner/work/actions/actions/riscv/bin
+          ./riscv/bin/riscv64-unknown-linux-musl-gcc -v
           /home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc -v
           wget -q  https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
