--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -43,7 +43,7 @@ jobs:
           ls -l /home/runner/work/actions/actions/riscv/bin
           echo $PATH
           export PATH=/home/runner/work/actions/actions/riscv/bin:$PATH
-          ./riscv/bin/riscv64-unknown-linux-musl-gcc -v
+          which riscv64-unknown-linux-musl-gcc
           /home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc -v
           wget -q  https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
