--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -25,6 +25,7 @@ jobs:
             flex
             expat-dev
             gawk
+            gcompat
             gfortran
             git
             gmp-dev
