--- a/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
+++ b/.github/workflows/alp_mpich-4.1_gcc-15.1.yml
@@ -46,6 +46,10 @@ jobs:
           export PATH=/home/runner/work/actions/actions/riscv/bin:$PATH
           which riscv64-unknown-linux-musl-gcc
           file /home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc
+          ls /
+          ls /lib
+          mkdir -p /lib64
+          ln -s /lib/ld-musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2
           /home/runner/work/actions/actions/riscv/bin/riscv64-unknown-linux-musl-gcc
           wget -q  https://www.mpich.org/static/downloads/4.1/mpich-4.1.tar.gz
           tar -xzf mpich-4.1.tar.gz
